refactored hd image modal, jsx quote setting, fixed safari image stretching, added camera to photo info, added animation to modal

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,26 @@
 body {
     @apply bg-primary font-medium;
 }
+
+#photoModal
+{
+    display: none;
+    opacity: 0;
+
+}
+
+@-webkit-keyframes fadeIn {
+    from { opacity: 0; }
+      to { opacity: 1; }
+}
+@keyframes fadeIn {
+    from { opacity: 0; }
+      to { opacity: 1; }
+}
+
+#photoModal.active
+{
+  display: block;
+    animation: fadeIn 0.5s;
+    opacity: 1;
+}
